--- a/config/gerrit.env
+++ b/config/gerrit.env
@@ -10,12 +10,13 @@
 ##############################################################################
 
 #GERRIT_INIT_ARGS=" \
+#  --install-plugin=download-commands \
 #  --install-plugin=commit-message-length-validator \
 #  --install-plugin=replication \
-#"
 #  --install-plugin=delete-project \
+# "
 
-WEBURL=http://localhost:8080
+WEBURL=http://gerrit.localhost
 #DATABASE_TYPE=postgresql
 AUTH_TYPE=LDAP
 LDAP_SERVER=ldap://ldap
@@ -28,3 +29,7 @@ LDAP_EMAILADDRESS=${email}
 LDAP_GROUPBASE=ou=Groups,dc=example,dc=org
 LDAP_GROUPMEMBERPATTERN=(member=${dn})
 LDAP_LOCALUSERNAMETOLOWERCASE=true
+
+# nginx-proxy
+VIRTUAL_HOST=gerrit.localhost
+VIRTUAL_PORT=8080
