--- a/config/jenkins.env
+++ b/config/jenkins.env
@@ -13,3 +13,7 @@ JENKINS_OPTS=""
 
 JENKINS_ADMIN_USER=admin
 JENKINS_ADMIN_PASSWORD=password
+
+# nginx-proxy
+VIRTUAL_HOST=jenkins.localhost
+VIRTUAL_PORT=8080
