Full Integration of Jenkins and Gerrit
- Run exclusive services with NGINX

  In favor of writing individual configs for NGINX, and since all we're
  doing is reverse proxying, using jwilder/nginx-proxy and setting
  VIRTUAL_HOST should be all we need to get NGINX working and allows for
  individual services to be brought up without causing NGINX to fall
  over due the other upstream not being online.

- Config Jenkins & Gerrit integration through several Groovy scripts

  These scripts provide all the initial configuration needed to get
  Jenkins and Gerrit talking to each other. They include:

  - Disabling the CLI over remoting
  - Enabling CSRF protection
  - Enabling the Agent -> Master subsystem
  - Setting the Jenkins hostname
  - Creating SSH credentials for connecting Jenkins to Gerrit
  - Configuring the Gerrit-Trigger plugins
  - Adding a single Jenkins SSH agent
  - Creating a JJB ini file through the Config Files plugin that Jenkins
    agent will use to configure JJB
  - Setting the global environment variable GIT_URL requires by
    Global-JJB

- Initialization Container

  After the Jenkins and Gerrit are some more work is needed to allow
  them to interact such as:

  - Creating an ssh key in Jenkins home directory
  - Creating a user in Gerrit that Jenkins will use to access the
    event-stream over ssh
  - Writing out the basic configuration for a ci-management repository
  - Bootstrapping JJB jobs into Jenkins
  - Adding the Verified label to Gerrit

  These are all done outside of the context of the Gerrit and Jenkins
  containers because most of them rely on processes already running, and
  allow us to use unmodified upstream containers.

- Updating plugins required by Global-JJB

Change-Id: I13cda69989c4832d451be1b841d177c9fdaf9e27
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/config/gerrit.env
+++ b/config/gerrit.env
@@ -15,7 +15,7 @@
 #"
 #  --install-plugin=delete-project \
 
-WEBURL=http://localhost:8080
+WEBURL=http://gerrit
 #DATABASE_TYPE=postgresql
 AUTH_TYPE=LDAP
 LDAP_SERVER=ldap://ldap
@@ -28,3 +28,7 @@ LDAP_EMAILADDRESS=${email}
 LDAP_GROUPBASE=ou=Groups,dc=example,dc=org
 LDAP_GROUPMEMBERPATTERN=(member=${dn})
 LDAP_LOCALUSERNAMETOLOWERCASE=true
+
+# nginx-proxy
+VIRTUAL_HOST=gerrit
+VIRTUAL_PORT=8080
